# facial-recognition

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  HOW_TO_RUN.md  README.md  pyproject.toml
backend/: config.py  main.py  requirements.txt
backend/api/: enroll.py  locker.py  pin_auth.py  recognize_multi.py  users.py
backend/middleware/: error_handler.py  rate_limiter.py
backend/models/: database.py  schemas.py
backend/scripts/: __init__.py  bootstrap_device.py  download_antispoof_model.py  retrain_model.py  train_model.py
backend/services/: anomaly_detector.py  antispoof_detector.py  custom_pt_embedder.py  drift_service.py  embedding_anomaly.py  embedding_crypto.py  enrollment_service.py  face_comparator.py  face_pipeline.py  feature_extractor.py  image_augmentation.py  liveness_detector.py  locker_controller.py  logger_service.py  ml_anomaly_service.py  ml_model_scoring.py  model_manager.py  multi_frame_recognizer.py  quality_filter.py  threshold_service.py  user_prompt.py  version_service.py
demo/: DEMO_RUNBOOK.md  demo_dashboard.py  demo_script.md  live_demo.py  locker_assignments.json  locker_simulation.py  run_demo.py
mock/: README.md
mock/facereq/: mock_face_request.py
